force-app/main/default/objects/KC_Agreement__c/KC_Agreement__c.object-meta.xml
<CustomObject>
    <description>RUL: This object stores link of Relationship Agreement amendment related to Organisation</description>
    <label>KC Relationship Agreement</label>
    <nameField>
        <displayFormat>KC-{000}</displayFormat>
        <label>KC Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KC Relationship Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>