force-app/main/default/objects/KC_Agreement__c/fields/Agreement_Name__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Name__c</fullName>
    <description>Enter the name of the Relationship Agreement or Relationship Agreement variation</description>
    <inlineHelpText>Enter the name of the Relationship Agreement or Relationship Agreement variation</inlineHelpText>
    <label>Agreement Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>