force-app/main/default/objects/KC_Agreement__c/fields/Agreement_URL__c.field-meta.xml
<CustomField>
    <fullName>Agreement_URL__c</fullName>
    <formula>HYPERLINK(KC_Agreement_Link_name__c, &apos;Click to Open from KC&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agreement URL</label>
    <type>Text</type>
</CustomField>