force-app/main/default/objects/KC_Agreement__c/fields/KC_Agreement_Link__c.field-meta.xml
<CustomField>
    <fullName>KC_Agreement_Link__c</fullName>
    <formula>HYPERLINK( &quot;/&quot;+Id ,&quot;&quot;+ Agreement_Name__c ,Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KC Relationship Agreement Link</label>
    <type>Text</type>
</CustomField>