force-app/main/default/objects/KC_Agreement__c/fields/KC_Agreement_Link_name__c.field-meta.xml
<CustomField>
    <fullName>KC_Agreement_Link_name__c</fullName>
    <label>KC Agreement Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>