force-app/main/default/objects/KC_Agreement__c/fields/Main_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Main_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RUL: This is used to highlight main agreement for the Organisation.</description>
    <inlineHelpText>Check this box if this is the main agreement</inlineHelpText>
    <label>Main Relationship Agreement</label>
    <type>Checkbox</type>
</CustomField>